[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/Levels/Objects/Player/player.gd" type="Script" id=1]
[ext_resource path="res://World/Levels/Objects/Player/player.obj" type="ArrayMesh" id=2]
[ext_resource path="res://World/Focus_Controller/Focus_Target/Focus_Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Levels/Objects/Components/Power_Collector/Power_Collector.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Levels/Objects/Components/Power_Container/Power_Container.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Levels/Objects/Components/Beam/Beam.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Levels/Objects/Components/Blaster/Blaster.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/UI/Element_Meter/Element_Meter_TX/Element_Meter_TX.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Levels/Objects/Player/charging.wav" type="AudioStream" id=9]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 0.256371
height = 0.505643

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.502184, 0 )
shape = SubResource( 2 )

[node name="Focus_Target" parent="." instance=ExtResource( 3 )]

[node name="Power_Collector" parent="." instance=ExtResource( 4 )]

[node name="Power_Container" parent="." instance=ExtResource( 5 )]
max_total_capacity = 5

[node name="Beam" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Blaster" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Element_Meter_TX" parent="." instance=ExtResource( 8 )]

[node name="Charging_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.49
mix_target = 2

